recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:7: error: identifier expected but ')' found.
		avance(length.)
                              ^